--- a/client/src/components/VideoFooter/VideoActionsContainer/VideoActions/video-actions.module.scss
+++ b/client/src/components/VideoFooter/VideoActionsContainer/VideoActions/video-actions.module.scss
@@ -9,6 +9,10 @@
   margin-right: 20px;
   p {
     margin-left: 5px;
+    margin-right: 5px;
+    font-size: 14px;
+  }
+  .like_counter {
     font-size: 14px;
   }
 }
