--- a/client/src/components/VideoFooter/VideoActionsContainer/VideoActions/video-actions.module.scss
+++ b/client/src/components/VideoFooter/VideoActionsContainer/VideoActions/video-actions.module.scss
@@ -8,11 +8,16 @@
   align-items: center;
   margin-right: 20px;
   p {
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
     font-size: 14px;
   }
   .like_counter {
-    font-size: 14px;
+    font-size: 16px;
+  }
+  .dislike_box {
+    & img {
+      transform: rotate(180deg);
+    }
   }
 }
