--- a/client/src/components/VideoList/VideoListItem/video-list-item.module.scss
+++ b/client/src/components/VideoList/VideoListItem/video-list-item.module.scss
@@ -1,3 +1,16 @@
+.video_list_item {
+  position: relative;
+}
+
+.del {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  background: var(--secondary-blue);
+  border-radius: 25px;
+  padding: 3px;
+}
+
 .preview {
   width: 100%;
   height: 100%;
